--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,7 @@
           "configurations": {
             "production": {
               "browserTarget": "horrorscope:build:production"
+              "proxyConfig": "src/proxy.conf.json"
             }
           }
         },
@@ -75,6 +76,7 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "horrorscope:build"
+            "proxyConfig": "src/proxy.conf.json"
           }
         },
         "test": {
